--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,19 @@
 
 
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="140dp"
+        tools:layout_editor_absoluteY="7dp"
+        tools:srcCompat="@tools:sample/avatars" />
+
     <TextView
         android:id="@+id/textView8"
         android:layout_width="99dp"
         android:layout_height="46dp"
-        android:text=" EMAIL:"
+        android:text=" EMAIL"
         android:textAlignment="center"
         android:textSize="20dp"
         android:textStyle="bold"
@@ -23,12 +31,13 @@
 
     <EditText
         android:id="@+id/editTextTextPasswordAddress"
-        android:layout_width="283dp"
-        android:layout_height="49dp"
+        android:layout_width="290dp"
+        android:layout_height="42dp"
         android:ems="10"
         android:inputType="textPassword"
         tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="162dp" />
+        tools:layout_editor_absoluteY="156dp" />
+
     <TextView
         android:id="@+id/textView10"
         android:layout_width="107dp"
@@ -37,13 +46,13 @@
         android:textAlignment="center"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteX="3dp"
         tools:layout_editor_absoluteY="247dp" />
 
     <EditText
         android:id="@+id/editTextTextPasswordAddress4"
-        android:layout_width="283dp"
-        android:layout_height="49dp"
+        android:layout_width="272dp"
+        android:layout_height="37dp"
         android:ems="10"
         android:inputType="textPassword"
         tools:layout_editor_absoluteX="125dp"
@@ -56,13 +65,7 @@
         tools:layout_editor_absoluteX="149dp"
         tools:layout_editor_absoluteY="354dp" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="140dp"
-        tools:layout_editor_absoluteY="7dp"
-        tools:srcCompat="@tools:sample/avatars" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
